# src/swagger.yml
@@ -13,7 +13,7 @@ servers:
 paths:
   /institutions:
     post:
-      operationId: "institution.create"
+      operationId: "views.institution.create"
       tags:
         - "Institution"
       summary: "Create a new Institution"
@@ -28,7 +28,7 @@ paths:
           description: "Institution created Successfully."
 
     get:
-      operationId: "institution.get_all"
+      operationId: "views.institution.get_all"
       tags:
         - "Institution"
       summary: "List of Institutions"
@@ -43,7 +43,7 @@ paths:
 
   /institutions/{id}: 
     get:
-      operationId: "institution.get"
+      operationId: "views.institution.get"
       tags:
         - "Institution"
       summary: "Details of nstitution"
@@ -65,7 +65,7 @@ paths:
                 $ref: "#/components/schemas/Institution"
     
     put:
-      operationId: "institution.update"
+      operationId: "views.institution.update"
       tags:
         - "Institution"
       summary: "Edit institution"
@@ -92,7 +92,7 @@ paths:
                 $ref: "#/components/schemas/Institution"
     
     delete:
-      operationId: "institution.delete"
+      operationId: "views.institution.delete"
       tags:
         - "Institution"
       summary: "Delete a institution"
@@ -115,7 +115,7 @@ paths:
 
   /projects:
     get:
-      operationId: "project.get_all"
+      operationId: "views.project.get_all"
       tags:
         - "Project"
       summary: "List of Projects with days remaning to complete"
@@ -128,7 +128,20 @@ paths:
               schema:
                 $ref: "#/components/schemas/Project"
 
-
+  /users:
+    get:
+      operationId: "views.user.get_all"
+      tags:
+        - "Project"
+      summary: "List of user with days remaning to complete"
+      description: "Lis of user"
+      responses:
+        "200":
+          description: "Successfully user."
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Project"
 components:
   schemas:
     Institution:
@@ -158,4 +171,23 @@ components:
           type: string
         date_close:
           type: string
+
+    User:
+      type: object
+      properties:
+        id:
+          type: integer
+          format: int64
+        rut:
+          type: string  
+        name:
+          type: string
+        l_name:
+          type: string
+        birthdate:
+          type: string
+        position:
+          type: string
+        age:
+          type: integer
         
